--- a/src/list/_includes.sass
+++ b/src/list/_includes.sass
@@ -21,7 +21,7 @@
 ///
 /// @throw `#{$start-at}` is not a number.
 /// @throw List index may not be 0.
-/// @throw Invalid index #{$start-at} for a list with #{$length} elements.
+/// @throw Invalid index #{$start-at} for a list with #{length} elements.
 ///
 /// @access public
 /// @require index.index
