--- a/src/list/_index.sass
+++ b/src/list/_index.sass
@@ -20,7 +20,7 @@
 ///
 /// @throw `#{$from-index}` is not a number.
 /// @throw List index may not be 0.
-/// @throw Invalid index #{$from-index} for a list with #{$length} elements.
+/// @throw Invalid index #{$from-index} for a list with #{length} elements.
 ///
 /// @access public
 /// @require internal.validate-index
