--- a/src/list/_map.sass
+++ b/src/list/_map.sass
@@ -25,6 +25,7 @@
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
+/// @require empty.empty
 /// @require internal.exception-parameter-type
 /// @require internal.exception-separator
 /// @require internal.separator-is-invalid
