--- a/src/list/_slice.sass
+++ b/src/list/_slice.sass
@@ -23,8 +23,8 @@
 /// @throw `#{$start-at}` is not a number.
 /// @throw `#{$end-at}` is not a number.
 /// @throw List index may not be 0.
-/// @throw Invalid index #{$start-at} for a list with #{$length} elements.
-/// @throw Invalid index #{$end-at} for a list with #{$length} elements.
+/// @throw Invalid index #{$start-at} for a list with #{length} elements.
+/// @throw Invalid index #{$end-at} for a list with #{length} elements.
 /// @throw The starting index is not less than the ending index.
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
