--- a/test/index.sass
+++ b/test/index.sass
@@ -5,6 +5,8 @@
 /// @group tests
 ////
 
+@use 'true' with ($catch-errors: true)
+
 
 // Required by 'src/list/concat'
 // Required by 'src/list/filter'
