--- a/test/list/_every.sass
+++ b/test/list/_every.sass
@@ -52,3 +52,8 @@
 
 		$assert: src.every(2 1 1 2 1 2 1 2, meta.get-function('_equals-2n-plus-index'))
 		@include true.assert-false($assert, '[2 1 1 2 1 2 1 2]')
+
+	@include true.it('Throws when $predicate is not an function')
+		$assert: src.every(null, null)
+		$expected: 'ERROR: $predicate: `null` is not a function for `every()`.'
+		@include true.assert-equal($assert, $expected)
