--- a/test/list/_remove-nth.sass
+++ b/test/list/_remove-nth.sass
@@ -46,3 +46,28 @@
 		$assert: src.remove-nth($list, 2, space)
 		$expected: ['ant' 'camel' 'duck' 'elephant']
 		@include true.assert-equal($assert, $expected)
+
+	@include true.it('Throws when $index is not an number')
+		$assert: src.remove-nth(null, null)
+		$expected: 'ERROR: $index: `null` is not a number for `remove-nth()`.'
+		@include true.assert-equal($assert, $expected)
+
+	@include true.it('Throws when $index index is zero')
+		$assert: src.remove-nth(null, 0)
+		$expected: 'ERROR: $index: List index may not be 0 for `remove-nth()`.'
+		@include true.assert-equal($assert, $expected, '[0]')
+
+	@include true.it('Throws when $index index is invalid for length')
+		$assert: src.remove-nth(null, 2)
+		$expected: 'ERROR: $index: Invalid index 2 for a list with 1 elements for `remove-nth()`.'
+		@include true.assert-equal($assert, $expected, '[2]')
+
+		$assert: src.remove-nth(null, -2)
+		$expected: 'ERROR: $index: Invalid index -2 for a list with 1 elements for `remove-nth()`.'
+		@include true.assert-equal($assert, $expected, '[-2]')
+
+	@include true.it('Throws when $separator is invalid')
+		$assert: src.remove-nth(null, 1, null)
+		$expected: 'ERROR: $separator: Must be "space", "comma", "slash", or "auto" for `remove-nth()`.'
+		@include true.assert-equal($assert, $expected)
+
