--- a/src/list/_remove-nth.sass
+++ b/src/list/_remove-nth.sass
@@ -21,7 +21,7 @@
 ///
 /// @throw `#{$index}` is not a number.
 /// @throw List index may not be 0.
-/// @throw Invalid index #{$index} for a list with #{$length} elements.
+/// @throw Invalid index #{$index} for a list with #{length} elements.
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
