--- a/src/list/_remove.sass
+++ b/src/list/_remove.sass
@@ -18,6 +18,8 @@
 /// @param {String} $separator [auto] - The type of separator to be used by the copied list.
 /// @return {List}
 ///
+/// @throw Must be "space", "comma", "slash", or "auto".
+///
 /// @access public
 /// @require internal.exception-separator
 /// @require internal.separator-is-invalid
