--- a/test/list/_map.sass
+++ b/test/list/_map.sass
@@ -63,3 +63,13 @@
 		$assert: src.map($list, meta.get-function('_add-2n-plus-index'), slash, true)
 		$expected: list.join(list.slash(2, 4, 2, 4, 2, 4, 2, 4), (), $bracketed: true)
 		@include true.assert-equal($assert, $expected)
+
+	@include true.it('Throws when $transformer is not an function')
+		$assert: src.map(null, null)
+		$expected: 'ERROR: $transformer: `null` is not a function for `map()`.'
+		@include true.assert-equal($assert, $expected)
+
+	@include true.it('Throws when $separator is invalid')
+		$assert: src.map(null, meta.get-function('_add-2n-plus-index'), null)
+		$expected: 'ERROR: $separator: Must be "space", "comma", "slash", or "auto" for `map()`.'
+		@include true.assert-equal($assert, $expected)
