--- a/test/list/_slice.sass
+++ b/test/list/_slice.sass
@@ -86,3 +86,51 @@
 		$assert: src.slice($expected, -2, -1, $separator: slash)
 		$expected: list.join(list.slash('duck', 'elephant'), (), $bracketed: true)
 		@include true.assert-equal($assert, $expected, '[slash]')
+
+	@include true.it('Throws when $start-at is not an number')
+		$assert: src.slice(null, null, null)
+		$expected: 'ERROR: $start-at: `null` is not a number for `slice()`.'
+		@include true.assert-equal($assert, $expected)
+
+	@include true.it('Throws when $start-at index is zero')
+		$assert: src.slice(null, 0, null)
+		$expected: 'ERROR: $start-at: List index may not be 0 for `slice()`.'
+		@include true.assert-equal($assert, $expected, '[0]')
+
+	@include true.it('Throws when $start-at index is invalid for length')
+		$assert: src.slice(null, 2, null)
+		$expected: 'ERROR: $start-at: Invalid index 2 for a list with 1 elements for `slice()`.'
+		@include true.assert-equal($assert, $expected, '[2]')
+
+		$assert: src.slice(null, -2, null)
+		$expected: 'ERROR: $start-at: Invalid index -2 for a list with 1 elements for `slice()`.'
+		@include true.assert-equal($assert, $expected, '[-2]')
+
+	@include true.it('Throws when $end-at is not an number')
+		$assert: src.slice(null, 1, null)
+		$expected: 'ERROR: $end-at: `null` is not a number for `slice()`.'
+		@include true.assert-equal($assert, $expected)
+
+	@include true.it('Throws when $end-at index is zero')
+		$assert: src.slice(null, 1, 0)
+		$expected: 'ERROR: $end-at: List index may not be 0 for `slice()`.'
+		@include true.assert-equal($assert, $expected, '[0]')
+
+	@include true.it('Throws when $end-at index is invalid for length')
+		$assert: src.slice(null, 1, 2)
+		$expected: 'ERROR: $end-at: Invalid index 2 for a list with 1 elements for `slice()`.'
+		@include true.assert-equal($assert, $expected, '[2]')
+
+		$assert: src.slice(null, 1, -2)
+		$expected: 'ERROR: $end-at: Invalid index -2 for a list with 1 elements for `slice()`.'
+		@include true.assert-equal($assert, $expected, '[-2]')
+
+	@include true.it('Throws when starting index is greater than ending index')
+		$assert: src.slice(null null, 2, 1)
+		$expected: 'ERROR: $start-at, $end-at: The starting index is not less than the ending index for `slice()`.'
+		@include true.assert-equal($assert, $expected)
+
+	@include true.it('Throws when $separator is invalid')
+		$assert: src.slice(null, 1, 1, null)
+		$expected: 'ERROR: $separator: Must be "space", "comma", "slash", or "auto" for `slice()`.'
+		@include true.assert-equal($assert, $expected)
