--- a/test/index.sass
+++ b/test/index.sass
@@ -18,15 +18,17 @@
 // Required by 'src/internal/exception'
 // Required by 'src/list/to-string'
 @use 'list/join'
-// Required by 'src/list/includes'
-@use 'list/index'
 // Required by 'src/list/remove-nth'
 // Required by 'src/list/sort'
 @use 'list/slice'
+// Required by 'src/list/to-string'
+@use 'list/flat'
 // Required by 'src/list/distinct'
 @use 'list/filter'
 // Required by 'src/list/sort'
 @use 'list/find'
+// Required by 'src/list/includes'
+@use 'list/index'
 // Required by 'src/list/replace'
 @use 'list/map'
 // Required by 'src/list/remove'
@@ -35,7 +37,6 @@
 @use 'list/distinct'
 @use 'list/every'
 @use 'list/find-nth'
-@use 'list/flat'
 @use 'list/includes'
 @use 'list/insert-nth'
 @use 'list/last-index'
