--- a/test/list/_to-string.sass
+++ b/test/list/_to-string.sass
@@ -22,11 +22,6 @@
 		$expected: '10px,20px,a'
 		@include true.assert-equal($assert, $expected)
 
-	@include true.it('Return the comma-delimited representation of a list with a null value')
-		$assert: src.to-string([10px, 20px, null, 'a'])
-		$expected: '10px,20px,,a'
-		@include true.assert-equal($assert, $expected)
-
 	@include true.it('Return the slash-delimited representation of a list')
 		$assert: src.to-string(list.slash(10px, 20px, 'a'))
 		$expected: '10px/20px/a'
@@ -40,4 +35,9 @@
 	@include true.it('Nested lists are flattened')
 		$assert: src.to-string([10px 20px (true, null, 'a')])
 		$expected: '10px 20px true  a'
+		@include true.assert-equal($assert, $expected)
+
+	@include true.it('test')
+		$assert: src.to-string(['', '', ''])
+		$expected: ',,'
 		@include true.assert-equal($assert, $expected)
