Updates `.join()` and `.to-string()`

--- a/src/list/_join.sass
+++ b/src/list/_join.sass
@@ -5,11 +5,8 @@
 /// @group api
 ////
 
-@use 'sass:list'
-
-
 ///
 /// Abstracted to `sass-exception` to avoid circular dependency.
-/// @see @link https://github.com/roydukkey/sass-module-exception/blob/master/src/internal/_join.sass
+/// @see @link https://github.com/roydukkey/sass-module-exception/blob/master/src/core/_from.sass
 ///
-@forward 'sass-exception/src/internal/join'
+@forward 'sass-exception/src/core/join' show join
