Updates test and doc

--- a/src/list/_to-string.sass
+++ b/src/list/_to-string.sass
@@ -13,7 +13,7 @@
 ///
 /// Returns a string representing the specified list and its items.
 ///
-/// @param {List} $list - The list from which to generate a string.
+/// @param {List | Map | ArgList} $list - The list from which to generate a string.
 /// @return {String}
 ///
 /// @access public
