--- a/test/list/_sort.sass
+++ b/test/list/_sort.sass
@@ -192,6 +192,31 @@
 		$expected: 'Five', 'Four', 'One', 'Six', 'Three', 'Two'
 		@include true.assert-equal($assert, $expected)
 
+	@include true.it('Return a list when given a map')
+		$assert: src.sort((a: 1))
+		$expected: (a 1,)
+		@include true.assert-equal($assert, $expected, '[single value; auto]')
+
+		$assert: src.sort((a: 1), $separator: comma)
+		$expected: (a 1,)
+		@include true.assert-equal($assert, $expected, '[single value; comma]')
+
+		$assert: src.sort((a: 1), $separator: space)
+		$expected: list.append((), a 1)
+		@include true.assert-equal($assert, $expected, '[single value; space]')
+
+		$assert: src.sort((a: 1, b: 2))
+		$expected: (a 1, b 2)
+		@include true.assert-equal($assert, $expected, '[multiple values; auto]')
+
+		$assert: src.sort((a: 1, b: 2))
+		$expected: (a 1, b 2)
+		@include true.assert-equal($assert, $expected, '[multiple values; comma]')
+
+		$assert: src.sort((a: 1, b: 2), $separator: space)
+		$expected: (a 1) (b 2)
+		@include true.assert-equal($assert, $expected, '[multiple values; space]')
+
 	@include true.it('Throws when $compare is not an function')
 		$assert: src.sort(null, null)
 		$expected: 'ERROR: $compare: `null` is not a function for `sort()`.'
