--- a/src/list/_reverse.sass
+++ b/src/list/_reverse.sass
@@ -7,6 +7,7 @@
 
 @use 'sass:list'
 @use 'sass:math'
+@use 'sass:meta'
 @use '../internal'
 
 
@@ -31,7 +32,10 @@
 	$length: list.length($list)
 
 	@if $length < 2
-		@return $list
+		@if meta.type-of($list) == 'map'
+			@return list.join($list, (), $separator)
+		@else
+			@return $list
 
 	@for $i from 1 through math.floor(math.div($length, 2))
 		$item: list.nth($list, $i)
