--- a/src/list/_insert-nth.sass
+++ b/src/list/_insert-nth.sass
@@ -7,6 +7,8 @@
 
 @use 'sass:list'
 @use 'sass:meta'
+@use 'sass-exception/src/exception/is-separator-invalid'
+@use 'sass-exception/src/exception/separator'
 @use '../internal'
 
 
@@ -25,10 +27,10 @@
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
-/// @require internal.exception-separator
-/// @require internal.separator-is-invalid
 /// @require internal.insert-nth
 /// @require internal.validate-index
+/// @require is-separator-invalid.is-separator-invalid
+/// @require separator.separator
 ///
 @function insert-nth($list, $index, $value, $separator: auto)
 	$index: internal.validate-index('insert-nth', 'index', $index, list.length($list))
@@ -36,8 +38,8 @@
 	@if meta.type-of($index) != 'number'
 		@error $index
 
-	@if internal.separator-is-invalid($separator)
-		@error internal.exception-separator('insert-nth')
+	@if is-separator-invalid.is-separator-invalid($separator)
+		@error separator.separator('insert-nth')
 
 	@return internal.insert-nth($list, $index, $value, $separator)
 
