--- a/src/list/_map.sass
+++ b/src/list/_map.sass
@@ -7,8 +7,10 @@
 
 @use 'sass:list'
 @use 'sass:meta'
+@use 'sass-exception/src/exception/is-separator-invalid'
+@use 'sass-exception/src/exception/parameter-type'
+@use 'sass-exception/src/exception/separator'
 @use 'empty'
-@use '../internal'
 
 
 ///
@@ -26,17 +28,17 @@
 ///
 /// @access public
 /// @require empty.empty
-/// @require internal.exception-parameter-type
-/// @require internal.exception-separator
-/// @require internal.separator-is-invalid
+/// @require is-separator-invalid.is-separator-invalid
+/// @require parameter-type.parameter-type
+/// @require separator.separator
 ///
 @function map($list, $transformer, $separator: auto, $bracketed: auto, $args...)
 
 	@if meta.type-of($transformer) != 'function'
-		@error internal.exception-parameter-type('map', 'transformer', $transformer, 'function')
+		@error parameter-type.parameter-type('map', 'transformer', $transformer, 'function')
 
-	@if internal.separator-is-invalid($separator)
-		@error internal.exception-separator('map')
+	@if is-separator-invalid.is-separator-invalid($separator)
+		@error separator.separator('map')
 
 	$result: empty.empty($separator, $bracketed, $list)
 	$index: 1
