--- a/src/list/_prepend.sass
+++ b/src/list/_prepend.sass
@@ -6,6 +6,8 @@
 ////
 
 @use 'sass:list'
+@use 'sass-exception/src/exception/is-separator-invalid'
+@use 'sass-exception/src/exception/separator'
 @use '../internal'
 
 
@@ -20,13 +22,13 @@
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
-/// @require internal.exception-separator
 /// @require internal.insert-nth
-/// @require internal.separator-is-invalid
+/// @require is-separator-invalid.is-separator-invalid
+/// @require separator.separator
 ///
 @function prepend($list, $value, $separator: auto)
 
-	@if internal.separator-is-invalid($separator)
-		@error internal.exception-separator('prepend')
+	@if is-separator-invalid.is-separator-invalid($separator)
+		@error separator.separator('prepend')
 
 	@return internal.insert-nth($list, 1, $value, $separator)
