--- a/src/list/_remove-nth.sass
+++ b/src/list/_remove-nth.sass
@@ -7,6 +7,8 @@
 
 @use 'sass:list'
 @use 'sass:meta'
+@use 'sass-exception/src/exception/is-separator-invalid'
+@use 'sass-exception/src/exception/separator'
 @use 'slice'
 @use '../internal'
 
@@ -25,9 +27,9 @@
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
-/// @require internal.exception-separator
-/// @require internal.separator-is-invalid
 /// @require internal.validate-index
+/// @require is-separator-invalid.is-separator-invalid
+/// @require separator.separator
 /// @require slice.slice
 ///
 @function remove-nth($list, $index, $separator: auto)
@@ -37,8 +39,8 @@
 	@if meta.type-of($index) != 'number'
 		@error $index
 
-	@if internal.separator-is-invalid($separator)
-		@error internal.exception-separator('remove-nth')
+	@if is-separator-invalid.is-separator-invalid($separator)
+		@error separator.separator('remove-nth')
 
 	@if $index == 1
 		@return slice.slice($list, $index + 1)
