--- a/src/list/_remove.sass
+++ b/src/list/_remove.sass
@@ -6,8 +6,9 @@
 ////
 
 @use 'sass:list'
+@use 'sass-exception/src/exception/is-separator-invalid'
+@use 'sass-exception/src/exception/separator'
 @use 'remove-nth'
-@use '../internal'
 
 
 ///
@@ -21,14 +22,14 @@
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
-/// @require internal.exception-separator
-/// @require internal.separator-is-invalid
+/// @require is-separator-invalid.is-separator-invalid
 /// @require remove-nth.remove-nth
+/// @require separator.separator
 ///
 @function remove($list, $value, $separator: auto)
 
-	@if internal.separator-is-invalid($separator)
-		@error internal.exception-separator('remove')
+	@if is-separator-invalid.is-separator-invalid($separator)
+		@error separator.separator('remove')
 
 	$index: list.index($list, $value)
 
