--- a/src/list/_replace.sass
+++ b/src/list/_replace.sass
@@ -6,8 +6,9 @@
 ////
 
 @use 'sass:meta'
+@use 'sass-exception/src/exception/is-separator-invalid'
+@use 'sass-exception/src/exception/separator'
 @use 'map'
-@use '../internal'
 
 
 ///
@@ -23,14 +24,14 @@
 ///
 /// @access public
 /// @require _replace-transformer
-/// @require internal.exception-separator
-/// @require internal.separator-is-invalid
+/// @require is-separator-invalid.is-separator-invalid
 /// @require map.map
+/// @require separator.separator
 ///
 @function replace($list, $value, $replacement, $separator: auto)
 
-	@if internal.separator-is-invalid($separator)
-		@error internal.exception-separator('replace')
+	@if is-separator-invalid.is-separator-invalid($separator)
+		@error separator.separator('replace')
 
 	@if $value == $replacement and ($separator != auto or $separator == list.separator($list))
 		@return $list
