--- a/src/list/_reverse.sass
+++ b/src/list/_reverse.sass
@@ -8,7 +8,8 @@
 @use 'sass:list'
 @use 'sass:math'
 @use 'sass:meta'
-@use '../internal'
+@use 'sass-exception/src/exception/is-separator-invalid'
+@use 'sass-exception/src/exception/separator'
 
 
 ///
@@ -21,13 +22,13 @@
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
-/// @require internal.exception-separator
-/// @require internal.separator-is-invalid
+/// @require is-separator-invalid.is-separator-invalid
+/// @require separator.separator
 ///
 @function reverse($list, $separator: auto)
 
-	@if internal.separator-is-invalid($separator)
-		@error internal.exception-separator('reverse')
+	@if is-separator-invalid.is-separator-invalid($separator)
+		@error separator.separator('reverse')
 
 	$length: list.length($list)
 
