--- a/src/list/_some.sass
+++ b/src/list/_some.sass
@@ -6,7 +6,7 @@
 ////
 
 @use 'sass:meta'
-@use '../internal'
+@use 'sass-exception/src/exception/parameter-type'
 
 
 ///
@@ -20,12 +20,12 @@
 /// @throw `#{$predicate}` is not a function.
 ///
 /// @access public
-/// @require internal.exception-parameter-type
+/// @require parameter-type.parameter-type
 ///
 @function some($list, $predicate, $args...)
 
 	@if meta.type-of($predicate) != 'function'
-		@error internal.exception-parameter-type('some', 'predicate', $predicate, 'function')
+		@error parameter-type.parameter-type('some', 'predicate', $predicate, 'function')
 
 	$index: 1
 
